--- a/Proyecto/Pages/index.html
+++ b/Proyecto/Pages/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,24 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        
+        <div>
+            <h2>Proyecto Final</h2>
+        </div>
+        <div>
+
+            <ul>
+                <li> 
+                    <a href="./011.html" >Solicitud de Empleo</a>
+                </li>
+                <li> 
+                    <a href="./011.html" >Registro y consulta de calificaciones</a>
+                </li>
+                <li> 
+                    <a href="./011.html" >Utilitarios</a>
+                </li>
+            </ul>
+
+        </div>
         <script src="" ></script>
     </body>
 </html>
