--- a/Proyecto/Pages/index.html
+++ b/Proyecto/Pages/index.html
@@ -11,21 +11,21 @@
         <div>
             <h2>Proyecto Final</h2>
         </div>
-        <div>
 
+        <div>
             <ul>
                 <li> 
-                    <a href="./011.html" >Solicitud de Empleo</a>
+                    <a href="" >Solicitud de Empleo</a>
                 </li>
                 <li> 
-                    <a href="./011.html" >Registro y consulta de calificaciones</a>
+                    <a href="" >Registro y consulta de calificaciones</a>
                 </li>
                 <li> 
-                    <a href="./011.html" >Utilitarios</a>
+                    <a href="" >Utilitarios</a>
                 </li>
-            </ul>
-
+            </ul> 
         </div>
+        
         <script src="" ></script>
     </body>
 </html>
