Add js file to solicitud empleo, module 1

--- a/Proyecto/Pages/index.html
+++ b/Proyecto/Pages/index.html
@@ -15,7 +15,7 @@
         <div>
             <ul>
                 <li> 
-                    <a href="" >Solicitud de Empleo</a>
+                    <a href="solicitud.html" >Solicitud de Empleo</a>
                 </li>
                 <li> 
                     <a href="" >Registro y consulta de calificaciones</a>
@@ -25,7 +25,7 @@
                 </li>
             </ul> 
         </div>
-        
+
         <script src="" ></script>
     </body>
 </html>
