--- a/Proyecto/Pages/solicitud.html
+++ b/Proyecto/Pages/solicitud.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div> 
-                    <label>Telefono:</label>
+                    <label>Telefono</label>
                     <input id="telefono" class="myInput" type="text" />
                 </div>
 
@@ -47,7 +47,17 @@
         </div>
 
         <div id=disp>
-            
+            <table id="idTable" >
+                <thead>
+                    <th>Cedula</th>
+                    <th>Nombre</th>
+                    <th>Edad</th>
+                    <th>Direccion</th>
+                    <th>Telefono</th>
+                    <th>Email</th>
+                </thead>
+                
+            </table>
         </div>
         <script src="../Scripts/retrievingSolicitud.js"></script>
     </body>
