Add more js and html files

--- a/Proyecto/Pages/index.html
+++ b/Proyecto/Pages/index.html
@@ -1,31 +1,39 @@
 <!DOCTYPE html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Inicio</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <div>
-            <h2>Proyecto Final</h2>
-        </div>
 
-        <div>
-            <ul>
-                <li> 
-                    <a href="solicitud.html" >Solicitud de Empleo</a>
-                </li>
-                <li> 
-                    <a href="" >Registro y consulta de calificaciones</a>
-                </li>
-                <li> 
-                    <a href="" >Utilitarios</a>
-                </li>
-            </ul> 
-        </div>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Inicio</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+</head>
 
-        <script src="" ></script>
-    </body>
+<body>
+    <div>
+        <h2>Proyecto Final</h2>
+    </div>
+
+    <div>
+        <ul>
+            <li>
+                <a href="solicitud.html">Solicitud de Empleo</a>
+            </li>
+            <li>
+                <a href="registro.html">Registro y consulta de calificaciones</a>
+            </li>
+            <li>
+                <a href="conversor.html">Conversor</a>
+            </li>
+            <li>
+                <a href="calculadora.html">Calculadora</a>
+            </li>
+
+
+        </ul>
+    </div>
+
+    <script src=""></script>
+</body>
+
 </html>
