--- a/Proyecto/Pages/registro.html
+++ b/Proyecto/Pages/registro.html
@@ -19,7 +19,7 @@
             </div>
             <br>
             <div>
-                <label>Examen parcial:</label>
+                <label>Examen parcia:</label>
                 <input id="parcial" type="text" required />
             </div>
             <br>
