modify files solicitud dot html and js

--- a/Proyecto/Pages/solicitud.html
+++ b/Proyecto/Pages/solicitud.html
@@ -46,7 +46,7 @@
             </form>
         </div>
 
-        <div id=disp>
+        <div >
             <table id="idTable" >
                 <thead>
                     <th>Cedula</th>
@@ -58,7 +58,9 @@
                 </thead>
                 
             </table>
+
         </div>
-        <script src="../Scripts/retrievingSolicitud.js"></script>
+        <div id=disp ></div>
+        <script src="../Scripts/solicitud.js"></script>
     </body>
 </html>
