some changes of project sructure done

--- a/Proyecto/Pages/solicitud.html
+++ b/Proyecto/Pages/solicitud.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div> 
-                    <label>Telefono</label>
+                    <label>Telefono:</label>
                     <input id="telefono" class="myInput" type="text" />
                 </div>
 
@@ -46,7 +46,7 @@
             </form>
         </div>
 
-        <div id=disp>
+        <div>
             <table id="idTable" >
                 <thead>
                     <th>Cedula</th>
