Categoria feature in table done

--- a/Proyecto/Pages/solicitud.html
+++ b/Proyecto/Pages/solicitud.html
@@ -68,6 +68,9 @@
                     <tr id="row5">
                         <th>Email</th>
                     </tr>
+                    <tr id="row6">
+                        <th>Categoria</th>
+                    </tr>
                 </thead>
                 
             </table> 
